# CPE-C-Benchme-sort

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c  output.csv
doc/: Doxyfile.in
doc/html/: _heap_sort_8c.html  _insertion_sort_8c.html  bubble_sort_8c.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  files.html  generate_array_8c.html  globals.html  globals_func.html  header_8h.html  header_8h_source.html  index.html  main_8c.html  selection_sort_8c.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
doc/latex/: _heap_sort_8c.tex  _insertion_sort_8c.tex  bubble_sort_8c.tex  files.tex  generate_array_8c.tex  header_8h.tex  header_8h_source.tex  main_8c.tex  refman.tex  selection_sort_8c.tex
libs/: HeapSort.c  InsertionSort.c  bubbleSort.c  bubbleSort.h  generateArray.c  generateArray.h  generateOutput.c  header.h  selectionSort.c
output/: main  output.csv
src/: main.c
